@@ -7692,14 +7692,14 @@ Synopsis
 \series bold
 #include
 \series default
- <libHX/clist.h>
+ <libHX/list.h>
 \begin_inset Index
 status open
 
 \begin_layout Plain Layout
 
 \family typewriter
-libHX/clist.h
+libHX/list.h
 \end_layout
 
 \end_inset
